# cgm

./: .gitignore  cnf.py  config.py  config.yaml  humans.py  main.py  menu.py  pyproject.toml  test.py
